# fsg-algoritmos-todo-list

./: README.md  TODO.md  meson.build  todo_list.c
include/: binds.h  test_util.h  todo.h  ui.h
src/: binds.c  meson.build  todo.c  todo_list.c  ui.c
tests/: binds.c  meson.build  todo.c
